ListView design, List of friends and Add friends
ListView design
List of friends
Add friends
Default avatar
Add friend and call forms

--- a/SkajPajClientWPF/SkajPajClientWPF/SkajPajClientWPF.csproj
+++ b/SkajPajClientWPF/SkajPajClientWPF/SkajPajClientWPF.csproj
@@ -139,7 +139,9 @@
   <ItemGroup>
     <Resource Include="Images\Logo\logo.PNG" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Avatars\DEFAULT.PNG" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Avatars\1.PNG" />
     <Resource Include="Images\Avatars\10.PNG" />
