--- a/SkajPajClientWPF/SkajPajClientWPF/SkajPajClientWPF.csproj
+++ b/SkajPajClientWPF/SkajPajClientWPF/SkajPajClientWPF.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -66,6 +67,7 @@
     </Compile>
     <Compile Include="Audio\AudioManager.cs" />
     <Compile Include="Audio\CallingManager.cs" />
+    <Compile Include="Audio\ConnectionManager.cs" />
     <Compile Include="Audio\DataPacket.cs" />
     <Compile Include="Encryption.cs" />
     <Compile Include="IPHelpfulFunktions.cs" />
